[package]
name = "gc-arena"
version = "0.2.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
license = "MIT"
description = "safe garbage collected arenas"
readme = "../../README.md"
repository = "https://github.com/kyren/gc-arena"

[dependencies]
gc-arena-derive = { path = "../gc-arena-derive", version = "0.1" }
heapless = { version = "0.5", optional = true }
smallvec = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.5"

[features]
default = [  ]